--- a/MoreExpress/EJSDemo/views/posts.ejs
+++ b/MoreExpress/EJSDemo/views/posts.ejs
@@ -1,3 +1,5 @@
+<% include partials/header %>
+
 <h1>The Post Page</h1>
 
 <% for (let i=0; i<posts.length; i++) { %>
@@ -11,3 +13,5 @@
         <%= post.title %> - <strong><%= post.author  %></strong>
     </li>
 <% }) %>
+
+<% include partials/footer %>
