YelpCamp: Creating Campgrounds

--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,4 +1,7 @@
+<% include partials/header %>
 <h1>sdfjsdklf</h1>
+
+<a href='/campgrounds/new'>Add New Campground</a>
 
 <% campgrounds.forEach(function(campground) { %>
     <div>
@@ -7,3 +10,5 @@
     </div>
 <% }); %>
   
+  
+<% include partials/footer %>
