--- a/YelpCamp/views/landing.ejs
+++ b/YelpCamp/views/landing.ejs
@@ -1,3 +1,6 @@
+<% include partials/header %>
 <h1>Landing page</h1>
 
 <a href='/campgrounds'>View All Campgrounds</a>
+
+<% include partials/footer %>
