YelpCamp: Styling Nav and Forms

--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -5,3 +5,18 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     </head>
     <body>
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">YelpCamp</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href='/'>Login</a></li>
+                <li><a href='/'>Sing Up</a></li>
+                <li><a href='/'>Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
