--- a/YelpCamp/views/index.ejs
+++ b/YelpCamp/views/index.ejs
@@ -21,12 +21,13 @@
                         <div class='caption'>
                             <h4><%= campground.name %></h4>
                         </div>
+                        <p>
+                            <a href='/campgrounds/<%= campground._id %>' class='btn btn-primary'>More Info</a>
+                        </p>
                     </div>
                 </div>
             <% }); %>
         </div>
-        
-        
 
     </div>
 <% include partials/footer %>
