--- a/YelpCamp/views/show.ejs
+++ b/YelpCamp/views/show.ejs
@@ -6,7 +6,7 @@
     <%= campground.name %>
 </p>
 
-<img src='<%= campground.image %>'>
+<img src='<%= campground.image %>'/>
 
 <p>
     <%= campground.description %>
