RESTful Blog App: SHOW

--- a/RESTfulBlogApp/views/new.ejs
+++ b/RESTfulBlogApp/views/new.ejs
@@ -12,8 +12,8 @@
             <input type='text' name='blog[image]' placeholder='image url'>
         </div>
         <div class='field'>
-            <label>Image</label>
-            <textarea name='blog[body]'></textarea>
+            <label>Blog Content</label>
+            <textarea name='blog[body]' required></textarea>
         </div>        
         <input class='ui violet basic button big' type='submit'>
     </form>
