YelpCamp: Comment Model

--- a/YelpCamp/views/show.ejs
+++ b/YelpCamp/views/show.ejs
@@ -12,4 +12,10 @@
     <%= campground.description %>
 </p>
 
+<% campground.comments.forEach(function(comment) { %>
+    <p>
+        <strong><%= comment.author %></strong> - <%= comment.text %>
+    </p>
+<% }) %>
+
 <% include partials/footer %>
