YelpCamp: Creating Comments Pt.1

--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <h1>show page</h1>
 
@@ -18,4 +18,4 @@
     </p>
 <% }) %>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
