--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 
 
@@ -30,4 +30,4 @@
         </div>
 
     </div>
-<% include partials/footer %>
+<% include ../partials/footer %>
