--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -12,6 +12,10 @@
     <%= campground.description %>
 </p>
 
+<p>
+    <a class='btn btn-success' href='/campgrounds/<%= campground._id %>/comments/new'>Add New Comment</a>
+</p>
+
 <% campground.comments.forEach(function(comment) { %>
     <p>
         <strong><%= comment.author %></strong> - <%= comment.text %>
