YelpCamp: Adding Auth Pt.3

--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -14,9 +14,9 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href='/'>Login</a></li>
-                <li><a href='/'>Sing Up</a></li>
-                <li><a href='/'>Logout</a></li>
+                <li><a href='/login'>Login</a></li>
+                <li><a href='/register'>Sing Up</a></li>
+                <li><a href='/logout'>Logout</a></li>
             </ul>
         </div>
     </div>
