--- a/YelpCamp/views/login.ejs
+++ b/YelpCamp/views/login.ejs
@@ -1,11 +1,11 @@
 <% include ./partials/header %>
 
-<h1>Sign Up!</h1>
+<h1>Login</h1>
 
-<form action='/register' method='POST'>
+<form action='/login' method='POST'>
     <input type='text' name='username' placeholder='username'>
     <input type='password' name='password' placeholder='password'>
-    <button>Sign Up</button>
+    <button>Login</button>
 </form>
 
 <% include ./partials/footer %>
