YelpCamp: Adding Auth Pt.4

--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -14,9 +14,13 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href='/login'>Login</a></li>
-                <li><a href='/register'>Sing Up</a></li>
-                <li><a href='/logout'>Logout</a></li>
+                <% if(!currentUser) { %>
+                    <li><a href='/login'>Login</a></li>
+                    <li><a href='/register'>Sing Up</a></li>                
+                <% } else { %>
+                    <li><a href='#'>Signed In As <%= currentUser.username %></a></li>
+                    <li><a href='/logout'>Logout</a></li>
+                <% } %>
             </ul>
         </div>
     </div>
