--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -39,13 +39,15 @@
                             <strong><%= comment.author.username %></strong>
                             <span class='pull-right'>10 days ago</span>
                             <p><%= comment.text %></p>
-                            <a class='btn btn-xs btn-warning' 
-                                href='/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit'>
-                                Edit
-                            </a>
-                            <form class="delete-form" action='/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE' method='POST'>
-                                <input type='submit' class='btn btn-xs btn-danger' value='Delete'>
-                            </form>
+                            <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                                <a class='btn btn-xs btn-warning' 
+                                    href='/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit'>
+                                    Edit
+                                </a>
+                                <form class="delete-form" action='/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE' method='POST'>
+                                    <input type='submit' class='btn btn-xs btn-danger' value='Delete'>
+                                </form>
+                            <% } %>
                         </div>
                     </div>
 
