--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -16,6 +16,10 @@
                 <div class='form-group'>
                     <input class='form-control' type='text' name='campground[description]' value='<%= campground.description %>'>
                 </div>
+                <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" name="location" id="location" value="<%= campground.location %>">
+                </div>
                 <div class='form-group'>
                     <button class='btn btn-lg btn-primary btn-block'>Submit</button>
                 </div>
