--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -16,6 +16,10 @@
                 <div class='form-group'>
                     <input class='form-control' type='text' name='description' placeholder='description'>
                 </div>
+                <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+                </div>
                 <div class='form-group'>
                     <button class='btn btn-lg btn-primary btn-block'>Submit</button>
                 </div>
